kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    portfolio.application: "frontend"
  name: "frontend"
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    portfolio.application: "frontend"
