kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    portfolio.application: "frontend"
  name: "frontend"
spec:
  ingressClassName: traefik
  rules:
    - host: "melanievandegraaf.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend"
                port:
                  name: http
